Fix links to github repos

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,7 +59,7 @@
 		News</a></li>
 	    <li><a href="/"><i class="icon-share"></i> Other versions</a></li>
 	    {% endif %}
-	    <li><a href="https://github.com/igraph/igraph">
+	    <li><a href="https://github.com/igraph">
 		<i class="icon-github"></i> On github</a></li>
           </ul>
           <!-- <form class="navbar-form navbar-right"> -->
