Put a NEWS section on the main page, for common stuff

--- a/_layouts/newstemp.html
+++ b/_layouts/newstemp.html
@@ -14,6 +14,10 @@ layout: default
                 <li>
 		  <a href="/{{page.lang}}/news.html#{{ post.id }}">{{ post.title }}</a>
 		</li>
+	      {% elsif page.lang == "all" %}
+                <li>
+		  <a href="/news.html#{{ post.id }}">{{ post.title }}</a>
+		</li>
 	      {% endif %}		
 	     {% endfor %}
 	  {% endfor %}
