--- a/css/other.css
+++ b/css/other.css
@@ -29,7 +29,7 @@ body.python {
   background-attachment: fixed;
 }
 
-body.cc {
+body.cc, body.start-page {
   background-color: #bbbbbb;
   background-image: -webkit-gradient(linear, left top, left bottom, from(#bbbbbb), to(#ffffff));
   background-image: -webkit-linear-gradient(top, #bbbbbb, #ffffff);
@@ -37,22 +37,6 @@ body.cc {
   background-image:      -o-linear-gradient(top, #bbbbbb, #ffffff);
   background-image:         linear-gradient(to bottom, #bbbbbb, #ffffff);
   background-attachment: fixed;
-}
-
-body.start-page {
-  background: #3e648d;
-  background-image: -webkit-gradient(
-      linear,
-      left top,
-      left bottom,
-      color-stop(0, #3e648d),
-      color-stop(1, #405a6a)
-  );
-  background-image: -o-linear-gradient(bottom, #3e648d 0%, #405a6a 100%);
-  background-image: -moz-linear-gradient(bottom, #3e648d 0%, #405a6a 100%);
-  background-image: -webkit-linear-gradient(bottom, #3e648d 0%, #405a6a 100%);
-  background-image: -ms-linear-gradient(bottom, #3e648d 0%, #405a6a 100%);
-  background-image: linear-gradient(to bottom, #3e648d 0%, #405a6a 100%);
 }
 
 #wrap {
@@ -120,7 +104,7 @@ code.rfun:after {
   text-align: center;
   text-shadow: 0 1px 0 rgba(0,0,0,.15);
   color: white;
-  margin-bottom: 10px;
+  margin-bottom: 30px;
   background: #3e648d;
   background-image: -webkit-gradient(
       linear,
@@ -176,77 +160,14 @@ code.rfun:after {
     border-top: 1px solid;
 }
 
-.start-page, .start-page h1, .start-page h1 small {
-    color: white;
-    text-shadow:
-    -1px -1px 0 #000,
-    1px -1px 0 #000,
-    -1px 1px 0 #000,
-    1px 1px 0 #000;
-}
-
-/* Masthead (headings and download button) */
-.bs-masthead {
-  position: relative;
-  padding: 80px 15px;
-  text-align: center;
-  text-shadow: 0 1px 0 rgba(0,0,0,.15);
-}
-.bs-masthead h1 {
-  font-size: 50px;
-  line-height: 1;
-}
-
-.bs-masthead .btn {
+.bs-header-outer .btn {
   margin-bottom: 5px;
   border: 1px solid;
 }
 
-.bs-masthead .btn:hover {
+.bs-header-outer .btn:hover {
   background: darkblue;
   color: white;
-}
-
-@media (min-width: 768px) {
-  .bs-masthead {
-    text-align: left;
-    padding-top:    110px;
-    padding-bottom: 80px;
-  }
-  .bs-masthead h1 {
-    font-size: 70px;
-  }
-  .bs-masthead .lead {
-    margin-right: 25%;
-    font-size: 20px;
-  }
-  .bs-masthead .btn {
-    width: auto;
-    margin: 20px 5px 20px 0px;
-    padding: 18px 24px;
-    font-size: 21px;
-  }
-}
-
-@media (min-width: 992px) {
-  .bs-masthead {
-    text-align: left;
-    padding-top:    130px;
-    padding-bottom: 80px;
-  }
-  .bs-masthead h1 {
-    font-size: 100px;
-  }
-  .bs-masthead .lead {
-    margin-right: 25%;
-    font-size: 30px;
-  }
-  .bs-masthead .btn {
-    width: auto;
-    margin: 20px 5px 20px 0;
-    padding: 18px 24px;
-    font-size: 21px;
-  }
 }
 
 .bs-docs-container {
@@ -271,4 +192,8 @@ span.anchor {
 #indices-and-tables {
     visibility: hidden;
     display: none;
+}
+
+hr.news-separator {
+    border-color: #000;
 }
