--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,6 +58,10 @@
               <a href="/{{ lang }}/news.html"><i class="icon-rss"></i>
 		News</a></li>
 	    <li><a href="/"><i class="icon-share"></i> Other versions</a></li>
+	    {% else %}
+            <li>
+              <a href="/news.html"><i class="icon-rss"></i>
+		News</a></li>
 	    {% endif %}
 	    <li><a href="https://github.com/igraph">
 		<i class="icon-github"></i> On github</a></li>
@@ -93,7 +97,7 @@
       <div class="row">
         <div class="col-xs-12">
           <p class="text-muted credit">
-	    &copy; 2003 &ndash; 2014 The igraph core team.
+	    &copy; 2003 &ndash; 2015 The igraph core team.
             &bull; Code licensed under 
             <a href="http://www.gnu.org/licenses/gpl-2.0.html">
             GNU GPL 2</a> or later, documentation under 
