--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -1,27 +1,74 @@
 ---
 layout: default
 langname: igraph
+lang: all
 ---
 
-    <div class="bs-masthead" id="content" role="main">
+<div class="bs-header-outer">
+  <div class="bs-header">
+    <div class="container">
+      <h1><img src="/img/igraph3.svg"> igraph &ndash;
+	<small>The network analysis package</small></h1>
+      <p class="lead">
+	igraph is a collection of network analysis tools with the
+	emphasis on <strong>efficiency</strong>,
+	<strong>portability</strong> and ease of use. igraph is
+	<strong>open source</strong> and free. igraph can be
+	programmed in <strong>R</strong>, <strong>Python</strong>
+	and&nbsp;<strong>C/C++</strong>.
+      </p><p>
+	<a href="/r" class="btn btn-lg btn-default">igraph R package</a>
+	<a href="/python" class="btn btn-lg btn-default">python-igraph</a>
+	<a href="/c" class="btn btn-lg btn-default">igraph C library</a>
+      </p>
+    </div>
+  </div>
+</div>
 
-      {{content}}
-
-      <div class="container">
-        <h1><img src="img/igraph3.svg"> igraph<br/>
-          <small>The network analysis package</small></h1>
-          <p class="lead">
-            igraph is a collection of network analysis tools with the
-            emphasis on <strong>efficiency</strong>,
-            <strong>portability</strong> and ease of use. igraph is
-            <strong>open source</strong> and free. igraph can be
-            programmed in <a href="http://www.r-project.org">
-	      <strong>GNU&nbsp;R</strong></a>,
-            <a href="http://www.python.org"><strong>Python</strong></a>
-	    and&nbsp;<strong>C/C++</strong>.
-          </p>
-      <a href="/r" class="btn btn-lg btn-default">igraph R package</a>
-      <a href="/python" class="btn btn-lg btn-default">python-igraph</a>
-      <a href="/c" class="btn btn-lg btn-default">igraph C library</a>
+<div class="container bs-docs-container">
+  <div class="row">
+    <div class="col-md-3">
+      <div class="bs-sidebar hidden-print" role="complementary"
+           data-spy="affix">
+        <ul class="nav bs-sidenav">
+          {% for post in site.posts limit:10 %}
+          <li>
+	    <a href="/index.html#{{ post.id }}">{{ post.title }}</a>
+	  </li>
+	  {% endfor %}
+	  <li>
+	    <a href="news.html">Older news &#8594;</a>
+	  </li>
+        </ul>
       </div>
     </div>
+
+    <div class="col-md-8">
+      <div class="bs-docs-section">
+
+	<div class="page-header">
+	  <h1>Recent news</h1>
+	</div>
+
+	{% for post in site.posts limit:10 %}
+
+	<div>
+	  <h2>
+	    <span id="{{ post.id }}" class="anchor">&nbsp;</span>
+	    <a href="{{ post.url }}">{{ post.title }}</a>
+	  </h2>
+	</div>
+
+	{{ post.content | extract_excerpt: post.url | redir_docs | smallheaders }}
+
+	<hr class="news-separator">
+
+	{% endfor %}
+
+	<h2><a href="news.html">Older news &#8594;</a></h2>
+
+      </div>
+    </div>
+  </div>
+
+</div>
