Simpler navbar, simpler news: all together in one list

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,25 +46,46 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/{{ lang }}">
-            <img src="/img/igraph4.svg" width=35> {{ langname }}
+          <a class="navbar-brand" href="/">
+            <img src="/img/igraph4.svg" width=35> igraph
           </a>
         </div>
         <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav navbar-left">
-	    {{ extramenu }}
-	    {% if lang == "r" or lang == "python" or lang == "c" %}
-            <li>
-              <a href="/{{ lang }}/news.html"><i class="icon-rss"></i>
-		News</a></li>
-	    <li><a href="/"><i class="icon-share"></i> Other versions</a></li>
-	    {% else %}
+	  {% if langname != null and langname != 'igraph' %}
+	  <ul class="nav navbar-nav">
+	    <li><a href="/{{ lang }}">| {{ langname }}</a></li>
+	  </ul>
+	  {% endif %}
+          <ul class="nav navbar-nav navbar-right">
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"
+		 role="button" aria-expanded="false">Products
+		<span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+		<li>
+		  <a href="/r"><i class="icon-fixed-width icon-rlogo"></i>
+		    igraph R package</a></li>
+		<li>
+		  <a href="/python"><i class="icon-fixed-width icon-python"></i>
+		    python-igraph</a></li>
+		<li>
+		  <a href="/c"><i class="icon-fixed-width icon-c"></i>
+		    igraph C library</a></li>
+		<li class="divider"></li>
+		<li>
+		  <a href="https://github.com/igraph/igraphdata">
+		    <i class="icon-fixed-width icon-rlogo"></i>
+		    igraphdata R package <i class="fa fa-github"></i></a></li>
+		<li>
+		  <a href="http://nexus.igraph.org">
+		    <i class="fa fa-times"></i>Nexus network repository</a></li>
+              </ul>
+            </li>
             <li>
               <a href="/news.html"><i class="icon-rss"></i>
 		News</a></li>
-	    {% endif %}
 	    <li><a href="https://github.com/igraph">
-		<i class="icon-github"></i> On github</a></li>
+	      <i class="icon-github"></i> On github</a></li>
           </ul>
           <!-- <form class="navbar-form navbar-right"> -->
           <!--   <div class="form-group"> -->
