--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -1,7 +1,5 @@
 ---
 layout: default
-langname: igraph
-lang: all
 ---
 
 <div class="bs-header-outer">
@@ -33,11 +31,11 @@ lang: all
         <ul class="nav bs-sidenav">
           {% for post in site.posts limit:10 %}
           <li>
-	    <a href="/index.html#{{ post.id }}">{{ post.title }}</a>
+	    <a href="{{ post.url }}">{{ post.title }}</a>
 	  </li>
 	  {% endfor %}
 	  <li>
-	    <a href="news.html">Older news &#8594;</a>
+	    <a href="news.html">All news &#8594;</a>
 	  </li>
         </ul>
       </div>
@@ -65,7 +63,7 @@ lang: all
 
 	{% endfor %}
 
-	<h2><a href="news.html">Older news &#8594;</a></h2>
+	<h2><a href="news.html">All news &#8594;</a></h2>
 
       </div>
     </div>
