--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,5 +1,7 @@
 ---
 layout: default
+mainheader: NEWS
+lead: About igraph releases and other things
 ---
 
 <div class="container bs-docs-container">
@@ -8,19 +10,16 @@ layout: default
       <div class="bs-sidebar hidden-print" role="complementary" 
            data-spy="affix">
         <ul class="nav bs-sidenav">
-          {% for post in site.posts %}
-  	    {% for cat in post.categories %}
-	      {% if cat == page.lang %}
-                <li>
-		  <a href="/{{page.lang}}/news.html#{{ post.id }}">{{ post.title }}</a>
-		</li>
-	      {% elsif page.lang == "all" %}
-                <li>
-		  <a href="/news.html#{{ post.id }}">{{ post.title }}</a>
-		</li>
-	      {% endif %}		
-	     {% endfor %}
-	  {% endfor %}
+          {% for post in site.posts limit:10 %}
+	    <li>
+	      <a href="{{ post.url }}">
+		{{ post.title }}
+	      </a>
+	    </li>
+	    {% endfor %}
+	    <li>
+	      <a href="">&hellip;</a>
+	    </li>
         </ul>
       </div>
     </div>
