shorter button on main page

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -17,7 +17,7 @@ layout: default
       </p><p>
 	<a href="/r" class="btn btn-lg btn-default">igraph R package</a>
 	<a href="/python" class="btn btn-lg btn-default">python-igraph</a>
-	<a href="http://szhorvat.net/mathematica/IGraphM" class="btn btn-lg btn-default">IGraph/M (for Mathematica)</a>
+	<a href="http://szhorvat.net/mathematica/IGraphM" class="btn btn-lg btn-default">IGraph/M</a>
 	<a href="/c" class="btn btn-lg btn-default">igraph C library</a>
       </p>
     </div>
