fixed default layout for new Jekyll version; ignoring Gemfile in output

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -103,8 +103,8 @@
     
     <div class="bs-header-outer"><div class="bs-header">
       <div class="container">
-        <h1>{{mainheader}}</h1>
-        <p class="lead">{{lead}}</p>        
+        <h1>{{layout.mainheader}}</h1>
+        <p class="lead">{{layout.lead}}</p>        
       </div>
     </div></div>
 
