more fixes for the default layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
       <script src="/js/respond.min.js"></script>
     <![endif]-->
 
-    {{ page.extrahead }}
+    {{ page.extrahead | default: layout.extrahead }}
 
   </head>
 
@@ -99,12 +99,12 @@
       </div>
     </div>
     
-    {% if lang != "index.html" %}
+    {% if page.layout != "main" %}
     
     <div class="bs-header-outer"><div class="bs-header">
       <div class="container">
-        <h1>{{layout.mainheader}}</h1>
-        <p class="lead">{{layout.lead}}</p>        
+        <h1>{{ page.mainheader | default: layout.mainheader }}</h1>
+        <p class="lead">{{ page.lead | default: layout.lead }}</p>        
       </div>
     </div></div>
 
