fixed main page body class

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,7 +34,7 @@
 
   </head>
 
-  <body class="{{ bodyclass }}">
+  <body class="{{ bodyclass | default: layout.bodyclass }}">
   <div id="wrap">
 
     <div class="navbar navbar-inverse navbar-fixed-top">
