restyling homepage for 0.8 release; docs/ folder not regenerated yet

--- a/_layouts/epydoc.html
+++ b/_layouts/epydoc.html
@@ -5,7 +5,7 @@ extrahead: <link href="/css/epydoc.css" rel="stylesheet">
 
 <div class="container bs-docs-container">
 <div class="row">
-  <div class="col-md-9 col-md-offset-1">
+  <div class="col-md-12">
   <div class="bs-docs-section">
 
     {{ content }}
