--- a/css/manual.css
+++ b/css/manual.css
@@ -19,11 +19,11 @@ code {
 }
 
 .navigation-header {
-    .text-align: right;
+    text-align: right;
 }
 
 .navigation-footer { 
-    margin-top: 50px;
+    margin: 50px 0;
 }
 
 div.variablelist td { 
