--- a/_layouts/manual.html
+++ b/_layouts/manual.html
@@ -3,14 +3,12 @@ layout: default
 extrahead: <link href="/css/manual.css" rel="stylesheet">
 ---
 
-<div class="container bs-docs-container">
-<div class="row">
-  <div class="col-md-9 col-md-offset-1">
-  <div class="bs-docs-section">
-
-    {{ content }}
-
+<div class="container">
+  <div class="row">
+    <div class="col-md-12">
+      <div class="bs-docs-section">
+        {{ content }}
+      </div>
+    </div>
   </div>
-  </div>
-</div>
 </div>
