--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,25 +1,22 @@
 ---
 layout: default
-mainheader: NEWS
+mainheader: News
 lead: About igraph releases and other things
 ---
 
-<div class="container bs-docs-container">
+<div class="container">
   <div class="row">
     <div class="col-md-3">
-      <div class="bs-sidebar hidden-print" role="complementary" 
-           data-spy="affix">
+      <div class="bs-sidebar affix hidden-print" role="complementary">
         <ul class="nav bs-sidenav">
           {% for post in site.posts limit:10 %}
-	    <li>
-	      <a href="{{ post.url }}">
-		{{ post.title }}
-	      </a>
-	    </li>
-	    {% endfor %}
-	    <li>
-	      <a href="">&hellip;</a>
-	    </li>
+            <li>
+              <a href="{{ post.url }}">{{ post.title }}</a>
+            </li>
+          {% endfor %}
+          <li>
+            <a href="">&hellip;</a>
+          </li>
         </ul>
       </div>
     </div>
@@ -27,20 +24,24 @@ lead: About igraph releases and other things
     <div class="col-md-8">
       <div class="bs-docs-section">
                 
-        {{ content | biggerh1 | redir_docs }}
+        <div class="post-header">
+          <h1>{{ page.title }}</h1>
+	      <div class="post-time"><time class="text-muted">{{ page.date | date_to_string: "ordinal", "US" }}</time></div>
+        </div>
+
+        {{ content | redir_docs }}
 
       </div>
 
       <div id="disqus_thread"></div>
       <script type="text/javascript">
-       /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
        var disqus_shortname = 'igraphorg'; // required: replace example with your forum shortname
 
        /* * * DON'T EDIT BELOW THIS LINE * * */
        (function() {
-	 var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-	 dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
-	 (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
+   var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+   dsq.src = '//' + disqus_shortname + '.disqus.com/embed.js';
+   (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
        })();
       </script>
       <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
