--- a/css/affix.css
+++ b/css/affix.css
@@ -17,11 +17,15 @@
   padding-top:    10px;
   padding-bottom: 10px;
   text-shadow: 0 1px 0 #fff;
-  background-color: #f7f5fa;
+  background-color: #e9ecef;
   border-radius: 5px;
 }
 
 /* All levels of nav */
+.bs-sidebar .nav > li {
+  width: 100%;
+}
+
 .bs-sidebar .nav > li > a {
   display: block;
   color: #716b7a;
@@ -30,16 +34,16 @@
 .bs-sidebar .nav > li > a:hover,
 .bs-sidebar .nav > li > a:focus {
   text-decoration: none;
-  background-color: #e5e3e9;
-  border-right: 1px solid #dbd8e0;
+  background-color: #d3d9df;
+  border-right: 2px solid #a7b3bf;
 }
-.bs-sidebar .nav > .active > a,
-.bs-sidebar .nav > .active:hover > a,
-.bs-sidebar .nav > .active:focus > a {
+.bs-sidebar .nav > li > a.active,
+.bs-sidebar .nav > li > a.active:hover,
+.bs-sidebar .nav > li > a.active:focus {
   font-weight: bold;
   color: #563d7c;
   background-color: transparent;
-  border-right: 1px solid #563d7c;
+  border-right: 2px solid #563d7c;
 }
 
 /* Nav: second level (shown on .active) */
@@ -56,7 +60,7 @@
 
 /* Show and affix the side nav when space allows it */
 @media (min-width: 992px) {
-  .bs-sidebar .nav > .active > ul {
+  .bs-sidebar .nav .nav-item > a.active + ul {
     display: block;
   }
   /* Widen the fixed sidebar */
@@ -65,7 +69,7 @@
     width: 213px;
   }
   .bs-sidebar.affix {
-    position: fixed; /* Undo the static from mobile first approach */
+    position: sticky; /* Undo the static from mobile first approach */
     top: 80px;
   }
   .bs-sidebar.affix-bottom {
