--- a/css/other.css
+++ b/css/other.css
@@ -7,57 +7,32 @@ html {
 html,
 body {
   height: 100%;
+  background-color: #fff;
 }
 
-body.r {
-  background-color: #ccccdd;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#ccccdd), to(#ffffff));
-  background-image: -webkit-linear-gradient(top, #ccccdd, #ffffff);
-  background-image:    -moz-linear-gradient(top, #ccccdd, #ffffff);
-  background-image:      -o-linear-gradient(top, #ccccdd, #ffffff);
-  background-image:         linear-gradient(to bottom, #ccccdd, #ffffff);
-  background-attachment: fixed;
+body {
+  position: relative;
 }
 
-body.python {
-  background-color: #ccdddd;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#ccdddd), to(#ffffff));
-  background-image: -webkit-linear-gradient(top, #ccdddd, #ffffff);
-  background-image:    -moz-linear-gradient(top, #ccdddd, #ffffff);
-  background-image:      -o-linear-gradient(top, #ccdddd, #ffffff);
-  background-image:         linear-gradient(to bottom, #ccdddd, #ffffff);
-  background-attachment: fixed;
-}
-
-body.cc, body.start-page {
-  background-color: #bbbbbb;
-  background-image: -webkit-gradient(linear, left top, left bottom, from(#bbbbbb), to(#ffffff));
-  background-image: -webkit-linear-gradient(top, #bbbbbb, #ffffff);
-  background-image:    -moz-linear-gradient(top, #bbbbbb, #ffffff);
-  background-image:      -o-linear-gradient(top, #bbbbbb, #ffffff);
-  background-image:         linear-gradient(to bottom, #bbbbbb, #ffffff);
-  background-attachment: fixed;
+nav.fixed-top {
+  box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
 }
 
 #wrap {
   min-height: 100%;
   height: auto;
-  /* Negative indent footer by its height */
-  margin: 0 auto -30px;
-  /* Pad bottom by footer height */
-  padding: 0 0 30px;
+  /* Pad top by header height */
+  padding: 57px 0 0 0;
 }
 
-/* Set the fixed height of the footer here */
 #footer {
   padding-top: 5px;
-/*  background-color: #f5f5f5; */
+}
+#footer p.credit {
+  text-align: center;
 }
 
-#wrap > .bs-header-outer {
-  padding: 50px 0px 0;
-}
-
+/*
 .navbar-brand
 {
     padding-right: 5px;
@@ -67,6 +42,7 @@ body.cc, body.start-page {
 {
     margin-right: 5px;
 }
+*/
 
 .gist {
     line-height: 1.2;
@@ -74,14 +50,41 @@ body.cc, body.start-page {
 
 @media(min-width:768px) {
     .bs-docs-section {
-	font-size: 140%;
+        font-size: 140%;
     }
     .bs-sidebar {
-	font-size: 120%;
+        font-size: 120%;
     }
     .gist .gist-file .gist-data {
-	font-size: 80% !important;
+        font-size: 80% !important;
     }
+}
+
+.bs-docs-section .navigation-header {
+    margin-bottom: 1.5rem;
+}
+.bs-docs-section h1 {
+    margin: 2.5rem 0;
+}
+.bs-docs-section h2 {
+    margin: 2.5rem 0 1.5rem 0;
+}
+.bs-docs-section h3 {
+    margin: 2.5rem 0 1.5rem 0;
+}
+
+.bs-docs-section .page-header:first-child h1,
+.bs-docs-section .post-header:first-child h1
+{
+    margin-top: 0 !important;
+}
+
+.post-header h1,
+.post-header h2 {
+	margin-bottom: 0.5rem !important;
+}
+.post-header .post-time {
+	margin-bottom: 1.5rem;
 }
 
 code {
@@ -156,24 +159,6 @@ code.rfun:after {
     font-size: medium;
 }
 
-#footer {
-    border-top: 1px solid;
-}
-
-.bs-header-outer .btn {
-  margin-bottom: 5px;
-  border: 1px solid;
-}
-
-.bs-header-outer .btn:hover {
-  background: darkblue;
-  color: white;
-}
-
-.bs-docs-container {
-    margin-bottom: 200px;
-}
-
 span.anchor { 
   margin-top: -70px;        /* Size of fixed header */
   padding-bottom: 70px;
@@ -194,10 +179,28 @@ span.anchor {
     display: none;
 }
 
-hr.news-separator {
-    border-color: #000;
-}
-
 #disqus_thread {
     margin-top: 40px;
 }
+
+.jumbotron {
+	position: relative;
+}
+.jumbotron canvas {
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #e9ecef;
+}
+.jumbotron .container {
+	pointer-events: none;
+	position: relative;
+	z-index: 10;
+}
+.jumbotron .container .btn {
+	pointer-events: auto;
+}
+
+
