--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -45,7 +45,7 @@
 
   <body class="{{ bodyclass | default: layout.bodyclass }}">
   <div id="wrap">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <nav class="navbar navbar-expand navbar-dark bg-dark fixed-top">
       <div class="container">
       <a class="navbar-brand" href="/">
         <img src="/img/igraph4.svg" width=35> igraph
