fixing formatting of argument listsin the R manual

--- a/css/manual.css
+++ b/css/manual.css
@@ -13,9 +13,14 @@ div.example-contents {
   text-decoration: underline;
   cursor: hand;
 }
+
 code {
     background: transparent;
     color: inherit;
+
+	/* undoing break-word setting from Bootstrap; it messes up the layout of
+	 * argument lists in the R manual */
+	word-break: normal !important;
 }
 
 .navigation-header {
