--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="shortcut icon" href="/img/igraph4.png" type="image/x-icon" />
+    <link rel="icon" href="/favicon.ico" type="image/png" />
 
     <title>{{ title }}</title>
 
@@ -48,7 +48,7 @@
     <nav class="navbar navbar-expand navbar-dark bg-dark fixed-top">
       <div class="container">
       <a class="navbar-brand" href="/">
-        <img src="/img/igraph4.svg" width=35> igraph
+        <img src="/img/igraph4.svg" width="35"> igraph
       </a>
 
       {% if langname != null and langname != 'igraph' %}
