updated logos and refreshed C docs

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -5,7 +5,7 @@ bodyclass: start-page
 
 <div class="jumbotron">
   <div class="container">
-    <h1 class="display-4"><img src="/img/igraph3.svg"> igraph &ndash;
+    <h1 class="display-4"><img src="/img/igraph_logo_black.svg" width="125"> igraph &ndash;
       <small>The network analysis package</small>
     </h1>
     <p class="lead">
