--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -48,7 +48,7 @@
     <nav class="navbar navbar-expand navbar-dark bg-dark fixed-top">
       <div class="container">
       <a class="navbar-brand" href="/">
-        <img src="/img/igraph4.svg" width="35"> igraph
+        <img src="/img/igraph_logo_white.svg" width="35"> igraph
       </a>
 
       {% if langname != null and langname != 'igraph' %}
