limit animation to main pages only

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -125,7 +125,11 @@
     <script src="/js/affix.js"></script>
     <script src="/js/jumbotron.js"></script>
     <script src="/js/toggle.js"></script>
-
+{% if page.animated_header or layout.animated_header %}
+      <script>
+        startAnimation();
+      </script>
+{% endif %}
     {{ page.extrafoot }}
   </body>
 </html>
