--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,6 +2,7 @@
 layout: default
 mainheader: News
 lead: About igraph releases and other things
+animated_header: true
 ---
 
 <div class="container">
