--- a/docs/css/manual.css
+++ b/docs/css/manual.css
@@ -1,3 +1,20 @@
+.search-box-container {
+  position: relative;
+  z-index: 5;
+}
+.search-box-container > .row:first-child {
+  position: absolute;
+  width: 480px;
+  top: 0;
+}
+.search-box-container .search-label {
+  transform: translateY(3px);
+}
+
+/* offset the documentation title page from the search bar */
+.titlepage {
+  margin-top: 80px;
+}
 
 div.example-contents {
   display: none;
