C manual layout: fix duplicate application of .bs-docs-section

--- a/_layouts/c-manual.html
+++ b/_layouts/c-manual.html
@@ -1,5 +1,5 @@
 ---
-layout: manual
+layout: default
 extrahead: |
     <link href="/css/manual.css" rel="stylesheet">
     <script async src="https://cse.google.com/cse.js?cx=003494361702844740117:dlnifinshhm"></script>
