fix Z index of search container results

--- a/css/manual.css
+++ b/css/manual.css
@@ -1,6 +1,6 @@
 .search-box-container {
   position: relative;
-  z-index: 5;
+  z-index: 15;   /* jumbotron is at 10 so we need this higher */
 }
 .search-box-container > .row:first-child {
   position: absolute;
