--- a/docs/css/manual.css
+++ b/docs/css/manual.css
@@ -10,6 +10,9 @@
 .search-box-container .search-label {
   transform: translateY(3px);
 }
+.gsc-results-wrapper-overlay {
+  top: 80px !important;
+}
 
 /* offset the documentation title page from the search bar */
 .titlepage {
