--- a/css/pydoctor.css
+++ b/css/pydoctor.css
@@ -271,7 +271,10 @@ pre {
 body.private-hidden #splitTables .private,
 body.private-hidden #childList .private,
 body.private-hidden #summaryTree .private {
-    display: none;
+    /* changed because we don't want to hide members that pydoctor considers
+	 * private; currently igraph._igraph.GraphBase is private according to
+	 * pydoctor because of the underscore */
+    /* display: none; */
 }
 
 #showPrivate {
