--- a/docs/c/doc/style.css
+++ b/docs/c/doc/style.css
@@ -181,7 +181,7 @@ h3 a, h3 a:visited, h3 a:hover { color: #000; text-decoration: none }
 .navigation-header a:visited { color: white; text-decoration: none }
 .navigation-header a:hover { color: white; text-decoration: none; background-color: rgba(255, 255, 255, 0.3) }
 
-span.type { font-family: monospace; }
+span.type { font-family: monospace; font-size: 16px; }
 
 /* Version info */
 #version_info {
