doc: fix font size of inline types in HTML docs, really

--- a/css/other.css
+++ b/css/other.css
@@ -18,6 +18,11 @@ nav.fixed-top {
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.6);
 }
 
+span.type {
+  font-family: monospace;
+  font-size: 87.5%;
+}
+
 #wrap {
   min-height: 100%;
   height: auto;
