fix: minor styling fix for warnings

--- a/css/manual.css
+++ b/css/manual.css
@@ -63,3 +63,13 @@ div.variablelist span.term {
 div.authorgroup {
     margin-bottom: 50px;
 }
+
+.warning {
+  background-color: #ffc;
+  padding: 0.2em 1em;
+  border: 1px solid #f80;
+}
+.warning .title {
+  color: #f80;
+}
+
