Add machinery for versioned docs to makefile - not yet HTML-templated properly

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
 
       {% if langname != null and langname != 'igraph' %}
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item"><a class="nav-link" href="/{{ lang }}">{{ langname }}</a></li>
+        <li class="nav-item"><a class="nav-link" href="/{{ lang }}">{{ langname }} {{ langversion }}</a></li>
       </ul>
       {% endif %}
 
