Dropdown menu for Python - looking for the other 2 langs

--- a/_layouts/pydoctor.html
+++ b/_layouts/pydoctor.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 extrahead: <link href="/css/pydoctor.css" rel="stylesheet">
+vmenu: true
+doctype: doc/api/
 ---
 
 <div class="container bs-docs-container">
