--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,22 @@
 
       {% if langname != null and langname != 'igraph' %}
       <ul class="navbar-nav mr-auto">
+        {% if layout.vmenu != null %}
+        <li class="nav-item"><a class="nav-link" href="/{{ lang }}">{{ langname }}</a></li>
+        <div class="dropdown show">
+          <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            {{ langversion }}
+          </a>
+        
+          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            {% for langversioni in langversions %}
+            <a class="dropdown-item" href="/{{ lang }}/{{ layout.doctype }}{{ langversioni }}">{{ langversioni }}</a>
+            {% endfor %}
+          </div>
+        </div>
+        {% else %}
         <li class="nav-item"><a class="nav-link" href="/{{ lang }}">{{ langname }} {{ langversion }}</a></li>
+        {% endif %}
       </ul>
       {% endif %}
 
