Build old python docs using epydoc, repatch pydoctor

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,7 @@
 
       {% if langname != null and langname != 'igraph' %}
       <ul class="navbar-nav mr-auto">
-        {% if layout.vmenu != null %}
+        {% if layout.vmenu != null  or page.vmenu != null %}
         <li class="nav-item"><a class="nav-link" href="/{{ lang }}">{{ langname }}</a></li>
         <div class="dropdown show">
           <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -60,7 +60,7 @@
         
           <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
             {% for langversioni in langversions %}
-            <a class="dropdown-item" href="/{{ lang }}/{{ layout.doctype }}{{ langversioni }}">{{ langversioni }}</a>
+            <a class="dropdown-item" href="/{{ lang }}/{{ page.doctype | default: layout.doctype }}{{ langversioni }}/">{{ langversioni }}</a>
             {% endfor %}
           </div>
         </div>
