--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,17 +53,16 @@
       <ul class="navbar-nav mr-auto">
         {% if layout.vmenu != null  or page.vmenu != null %}
         <li class="nav-item"><a class="nav-link" href="/{{ lang }}">{{ langname }}</a></li>
-        <div class="dropdown show">
-          <a class="btn btn-secondary dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-            {{ langversion }}
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">
+            {{ page.langversion }}
           </a>
-        
-          <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+          <div class="dropdown-menu">
             {% for langversioni in langversions %}
             <a class="dropdown-item" href="/{{ lang }}/{{ page.doctype | default: layout.doctype }}{{ langversioni }}/">{{ langversioni }}</a>
             {% endfor %}
           </div>
-        </div>
+        </li>
         {% else %}
         <li class="nav-item"><a class="nav-link" href="/{{ lang }}">{{ langname }} {{ langversion }}</a></li>
         {% endif %}
