--- a/_layouts/epydoc.html
+++ b/_layouts/epydoc.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 extrahead: <link href="/css/epydoc.css" rel="stylesheet">
+doctype: doc/api/
 ---
 
 <div class="container bs-docs-container">
