--- a/_layouts/r-manual.html
+++ b/_layouts/r-manual.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 extrahead: <link href="/css/manual.css" rel="stylesheet">
+vmenu: true
+doctype: doc/jekyll/
 ---
 
 <div class="container">
