Better endpoints and new post

--- a/_layouts/c-manual.html
+++ b/_layouts/c-manual.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 vmenu: true
-doctype: doc/jekyll/
+doctype: html/
 extrahead: |
     <link href="/css/manual.css" rel="stylesheet">
     <script async src="https://cse.google.com/cse.js?cx=003494361702844740117:dlnifinshhm"></script>
