--- a/_layouts/pydoctor.html
+++ b/_layouts/pydoctor.html
@@ -2,7 +2,7 @@
 layout: default
 extrahead: <link href="/css/pydoctor.css" rel="stylesheet">
 vmenu: true
-doctype: doc/api/
+doctype: api/
 ---
 
 <div class="container bs-docs-container">
