--- a/_layouts/r-manual.html
+++ b/_layouts/r-manual.html
@@ -2,7 +2,7 @@
 layout: default
 extrahead: <link href="/css/manual.css" rel="stylesheet">
 vmenu: true
-doctype: doc/jekyll/
+doctype: html/
 ---
 
 <div class="container">
