--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,7 +51,21 @@
 
       {% if langname != null and langname != 'igraph' %}
       <ul class="navbar-nav mr-auto">
+        {% if layout.vmenu != null  or page.vmenu != null %}
         <li class="nav-item"><a class="nav-link" href="/{{ lang }}">{{ langname }}</a></li>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">
+            {{ page.langversion }}
+          </a>
+          <div class="dropdown-menu">
+            {% for langversioni in langversions %}
+            <a class="dropdown-item" href="/{{ lang }}/{{ page.doctype | default: layout.doctype }}{{ langversioni }}/">{{ langversioni }}</a>
+            {% endfor %}
+          </div>
+        </li>
+        {% else %}
+        <li class="nav-item"><a class="nav-link" href="/{{ lang }}">{{ langname }} {{ langversion }}</a></li>
+        {% endif %}
       </ul>
       {% endif %}
 
