fix: show versions in reverse order (newest first), add 'latest' explicitly

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -58,7 +58,8 @@
             {{ page.langversion }}
           </a>
           <div class="dropdown-menu">
-            {% for langversioni in langversions %}
+            <a class="dropdown-item" href="/{{ lang }}/{{ page.doctype | default: layout.doctype }}latest/">latest</a>
+            {% for langversioni in langversions reversed %}
             <a class="dropdown-item" href="/{{ lang }}/{{ page.doctype | default: layout.doctype }}{{ langversioni }}/">{{ langversioni }}</a>
             {% endfor %}
           </div>
