fix: add scroll padding to html element to account for the navbar

--- a/css/other.css
+++ b/css/other.css
@@ -1,7 +1,8 @@
 /* Sticky footer, http://getbootstrap.com/examples/sticky-footer-navbar/ */
 
 html {
-  min-height: 100%
+  min-height: 100%;
+  scroll-padding-top: 80px;
 }
 
 html,
