--- a/docs/css/pydoctor.css
+++ b/docs/css/pydoctor.css
@@ -271,10 +271,24 @@ pre {
 body.private-hidden #splitTables .private,
 body.private-hidden #childList .private,
 body.private-hidden #summaryTree .private {
-    /* changed because we don't want to hide members that pydoctor considers
-	 * private; currently igraph._igraph.GraphBase is private according to
-	 * pydoctor because of the underscore */
-    /* display: none; */
+    display: none;
+}
+
+/* We don't want to hide igraph._igraph and igraph._igraph.GraphBase, both of
+ * which are private according to pydoctor because of the underscore */
+body.private-hidden #splitTables td.module.private,
+body.private-hidden #childList td.module.private,
+body.private-hidden #summaryTree td.module.private {
+    /* however, we still want to hide private instance variables so we add a
+	 * more restrictive CSS rule. We do _not_  */
+    display: table-cell !important;
+}
+body.private-hidden #splitTables tr.module.private,
+body.private-hidden #childList tr.module.private,
+body.private-hidden #summaryTree tr.module.private {
+    /* however, we still want to hide private instance variables so we add a
+	 * more restrictive CSS rule. We do _not_  */
+    display: table-row !important;
 }
 
 #showPrivate {
