fix: fix unhiding of items that PyDoctor marks as private

--- a/css/pydoctor.css
+++ b/css/pydoctor.css
@@ -275,20 +275,23 @@ body.private-hidden #summaryTree .private {
 }
 
 /* We don't want to hide igraph._igraph and igraph._igraph.GraphBase, both of
- * which are private according to pydoctor because of the underscore */
+ * which are private according to pydoctor because of the underscore. However,
+ * we still want to hide private instance variables so we add a more
+ * restrictive CSS rule */
 body.private-hidden #splitTables td.module.private,
 body.private-hidden #childList td.module.private,
 body.private-hidden #summaryTree td.module.private {
-    /* however, we still want to hide private instance variables so we add a
-	 * more restrictive CSS rule. We do _not_  */
     display: table-cell !important;
 }
 body.private-hidden #splitTables tr.module.private,
 body.private-hidden #childList tr.module.private,
 body.private-hidden #summaryTree tr.module.private {
-    /* however, we still want to hide private instance variables so we add a
-	 * more restrictive CSS rule. We do _not_  */
     display: table-row !important;
+}
+body.private-hidden #splitTables li.module.private,
+body.private-hidden #childList li.module.private,
+body.private-hidden #summaryTree li.module.private {
+    display: list-item !important;
 }
 
 #showPrivate {
