--- a/docs/css/pydoctor.css
+++ b/docs/css/pydoctor.css
@@ -288,9 +288,9 @@ body.private-hidden #childList tr.module.private,
 body.private-hidden #summaryTree tr.module.private {
     display: table-row !important;
 }
-body.private-hidden #splitTables li.module.private,
-body.private-hidden #childList li.module.private,
-body.private-hidden #summaryTree li.module.private {
+body.private-hidden #splitTables li.private,
+body.private-hidden #childList li.private,
+body.private-hidden #summaryTree li.private {
     display: list-item !important;
 }
 
