fix: PyDoctor CSS fix for new version in the 'develop' branch

--- a/css/pydoctor.css
+++ b/css/pydoctor.css
@@ -413,4 +413,25 @@ table.fieldTable tr td {
     font-style: normal !important;
 }
 
+#search-box-container {
+    /* search does not work yet so hide it */
+    display: none;
+}
 
+.bs-docs-section .navbar .navbar-header {
+	flex: 1;
+}
+.bs-docs-section .navbar .container {
+	padding: 0;
+}
+.bs-docs-section .navbar .navbar-header .projecthome {
+    display: none;
+}
+.bs-docs-section .navbar .navlinks a {
+	float: right;
+    margin: 0 0 0 16px;
+}
+.bs-docs-section .navbar .navlinks .navbar-brand a {
+	float: none;
+	margin: 0;
+}
