--- a/_layouts/pydoctor.html
+++ b/_layouts/pydoctor.html
@@ -3,6 +3,7 @@ layout: default
 extrahead: <link href="/css/pydoctor.css" rel="stylesheet">
 vmenu: true
 doctype: api/
+lang: python
 ---
 
 <div class="container bs-docs-container">
