Revert a few uninfluential changes to clean up squashed commit

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,7 +63,7 @@
         {% if layout.vmenu != null or page.vmenu != null %}
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">
-            {{ page.langversion | langversion }}
+            {{ page.langversion }}
           </a>
           <div class="dropdown-menu" id="doc-version-switcher">
             <a class="dropdown-item" href="#">Please wait...</a>
