--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -55,8 +55,12 @@
 
       {% if langname != null and langname != 'igraph' %}
       <ul class="navbar-nav mr-auto">
-        {% if layout.vmenu != null or page.vmenu != null %}
+        {% if langname == 'python-igraph' %}
+        <li class="nav-item"><a class="nav-link" href="/{{ lang }}/versions/latest">{{ langname }}</a></li>
+        {% else %}
         <li class="nav-item"><a class="nav-link" href="/{{ lang }}">{{ langname }}</a></li>
+        {% endif %}
+        {% if layout.vmenu != null or page.vmenu != null %}
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#">
             {{ page.langversion }}
@@ -66,8 +70,6 @@
           </div>
           {%- assign needs_doc_version_switcher = true %}
         </li>
-        {% else %}
-        <li class="nav-item"><a class="nav-link" href="/{{ lang }}">{{ langname }} {{ langversion }}</a></li>
         {% endif %}
       </ul>
       {% endif %}
