--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,6 +26,7 @@ animated_header: true
       <div class="bs-docs-section">
         <div class="post-header">
           <h1>{{ page.title }}</h1>
+          <div class="post-authors text-muted">{{ page.authors | default: "The igraph Team" | array_to_sentence_string }}</div>
 	      <div class="post-time"><time class="text-muted">{{ page.date | date_to_string: "ordinal", "US" }}</time></div>
         </div>
 
