--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,8 +26,10 @@ animated_header: true
       <div class="bs-docs-section">
         <div class="post-header">
           <h1>{{ page.title }}</h1>
+          {% if page.title %}
           <div class="post-authors text-muted">{{ page.authors | default: site.authors | array_to_sentence_string }}</div>
-	      <div class="post-time"><time class="text-muted">{{ page.date | date_to_string: "ordinal", "US" }}</time></div>
+	        {% endif %}
+          <div class="post-time"><time class="text-muted">{{ page.date | date_to_string: "ordinal", "US" }}</time></div>
         </div>
 
         {{ content | redir_docs }}
