--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -36,4 +36,16 @@ animated_header: true
       </div>
     </div>
   </div>
+  <div id='discourse-comments' class="d-print-none">
+    <script type="text/javascript">
+    DiscourseEmbed = { discourseUrl: 'https://igraph.discourse.group/',
+      discourseReferrerPolicy: 'no-referrer-when-downgrade',
+      discourseEmbedUrl: 'https://igraph.org{{ page.url }}' };
+    (function() {
+      var d = document.createElement('script'); d.type = 'text/javascript'; d.async = true;
+      d.src = DiscourseEmbed.discourseUrl + 'javascripts/embed.js';
+      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(d);
+    })();
+</script>
+    </div>
 </div>
