--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -80,8 +80,11 @@
 
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ml-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="/news.html"><i class="fa-solid fa-rss"></i> News</a>
+          </li>
           <li class="nav-item dropdown">
-            <a href="#" class="nav-link dropdown-toggle" id="productsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Products</a>
+            <a href="#" class="nav-link dropdown-toggle" id="productsDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Packages</a>
             <div class="dropdown-menu" aria-labelledby="productsDropdown">
               <a class="dropdown-item" href="https://r.igraph.org">igraph R package</a>
               <a class="dropdown-item" href="https://python.igraph.org">python-igraph</a>
@@ -91,15 +94,14 @@
               <a class="dropdown-item" href="https://github.com/igraph/igraphdata">igraphdata R package <i class="fa-brands fa-github"></i></a>
             </div>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/news.html"><i class="fa-solid fa-rss"></i> News</a>
+          <li class="nav-item dropdown">
+            <a href="#" class="nav-link dropdown-toggle" id="communityDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Community</a>
+            <div class="dropdown-menu" aria-labelledby="communityDropdown">
+              <a class="dropdown-item" href="https://igraph.discourse.group"><i class="fa-solid fa-comments"></i> Forum</a>
+              <a class="dropdown-item" href="https://discord.gg/cSyHDPJWDD"><i class="fa-brands fa-discord"></i> Discord</a>
+              <a class="dropdown-item" href="/code-of-conduct.html"><i class="fa-solid fa-gavel"></i> Code of Conduct</a>
+            </div>
           </li>
-          <li class="nav-item">
-            <a class="nav-link" href="https://igraph.discourse.group"><i class="fa-solid fa-comments"></i> Forum</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="/code-of-conduct.html"><i class="fa-solid fa-gavel"></i> Code of Conduct</a>
-          </li>          
           <li class="nav-item">
             <a class="nav-link" href="https://github.com/igraph"><i class="fa-brands fa-github"></i> On GitHub</a>
           </li>
