feat: added community packages menu item

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -97,6 +97,7 @@
           <li class="nav-item dropdown">
             <a href="#" class="nav-link dropdown-toggle" id="communityDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Community</a>
             <div class="dropdown-menu" aria-labelledby="communityDropdown">
+              <a class="dropdown-item" href="/community/packages.html"><i class="fa-solid fa-cube"></i> Community packages</a>
               <a class="dropdown-item" href="https://igraph.discourse.group"><i class="fa-solid fa-comments"></i> Forum</a>
               <a class="dropdown-item" href="https://discord.gg/cSyHDPJWDD"><i class="fa-brands fa-discord"></i> Discord</a>
               <a class="dropdown-item" href="/code-of-conduct.html"><i class="fa-solid fa-gavel"></i> Code of Conduct</a>
