feat: use jekyll-seo-tag to add SEO-friendly meta tags to header

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -47,6 +47,7 @@
 	</script>
 
     {{ page.extrahead | default: layout.extrahead }}
+    {% seo %}
   </head>
 
   <body class="{{ bodyclass | default: layout.bodyclass }}">
