feat: link to Atom feed from <head>, include all posts

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -12,6 +12,9 @@
     <link rel="icon" href="/favicon.svg" />
     <link rel="alternate icon" href="/favicon.ico" />
 
+    <!-- Atom feed -->
+    {% feed_meta %}
+
     <title>{{ title }}</title>
 
     <!-- Bootstrap core CSS -->
